fix pull up on hot reload breaks the page structure

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -100,3 +100,7 @@ main {
 a {
   color: inherit;
 }
+
+.ptr__children {
+  overflow: hidden !important;
+}
